# SAGE

./: .gitignore  ETHICS.md  LICENSE.txt  benchmarking.py  extract-date-from-images.py  extract-vqa.py  filter-near-duplicates.py  generate-study-id.py  hyperkvasir-on-SAGE.py  image-captioning.py  interrater-disagreement.py  multiclass-train-test-split.py  pyproject.toml  readme.md  standard-dataset-creator.py  trainer.py
lib/trainer/: loss.py  sage.py  transforms.py  utils.py
lib/utils/: image.py  tree.py
prompts/: captioning.py  extract_vqa.py
