[project]
name = "neoguthalu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "imagehash>=4.3.2",
    "iterative-stratification>=0.1.9",
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.9",
    "natsort>=8.4.0",
    "open-clip-torch>=3.3.0",
    "openai>=2.41.1",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "prettytable>=3.17.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "synapseclient>=4.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "wandb>=0.27.2",
]
